change color by level color material

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,8 @@
 
 @include material.mat-core();
 
-$workshop-primary: material.mat-palette(material.$mat-cyan);
-$workshop-accent: material.mat-palette(material.$mat-pink);
+$workshop-primary: material.mat-palette(material.$mat-cyan, 500, 200, 800);
+$workshop-accent: material.mat-palette(material.$mat-pink, A200, A100, A400);
 
 $workshop-theme: material.mat-light-theme(
   (
